--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -668,7 +668,7 @@
 %--------------carapace width from  at sea observers------------------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \es assessments/2016/timeseries/observer/cw.pdf}\caption{Time series of mean carapace width of commercial crab measured by at-sea-observers. For 4X, the year refers to the starting year of the season. }
+\includegraphics[width=0.9\textwidth,trim={0 0 0 1cm },clip]{\h \es assessments/2016/timeseries/observer/cw.pdf}\caption{Time series of mean carapace width of commercial crab measured by at-sea-observers. For 4X, the year refers to the starting year of the season. }
 \end{figure}
 
 \clearpage
