--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -115,17 +115,18 @@
 
 %--------------scotian shelf community characteristics------------------------------------
 
-%\begin{figure}
-%   \centering  \subfloat{\includegraphics[width=0.44\textwidth]{\h \e speciescomposition/analysis/SSE/allseasons/complex/maps/maps\D ca1\D %2014.png}}\
-%	\subfloat{\includegraphics[width=0.44\textwidth]{\h \ei speciescomposition/analysis/SSE/allseasons/complex/maps/maps\D ca2\D 2014.png}}\\
-%	\subfloat{\includegraphics[width=0.44\textwidth]{\h \ei speciesarea/analysis/SSE/allseasons/complex/maps/maps\D Npred\D 2014.png}}\	  
-%	\subfloat{\includegraphics[width=0.44\textwidth]{\h \ei speciesarea/analysis/SSE/allseasons/complex/maps/maps\D Z\D 2014.png}}\\  
-%	  \subfloat{\includegraphics[width=0.44\textwidth]{\h \ei metabolism/analysis/SSE/allseasons/complex/maps/maps\D mr\D 2014.png}}\
-%	\subfloat{\includegraphics[width=0.44\textwidth]{\h \ei metabolism//analysis/SSE/allseasons/complex/maps/maps\D smr\D 2014.png}}\\
-%	\caption{Community composition and ecological characteristics used in snow crab habitat determination GAM modeling. Annual time series are used. Shown are results from 2014. }
-%
-%\end{figure}
-%\clearpage
+\begin{figure}
+  \centering  
+  \subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei speciescomposition/maps/ca1/snowcrab/annual/ca1\D mean\D 2016.png}}\
+	\subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei speciescomposition/maps/ca2/snowcrab/annual/ca2\D mean\D 2016.png}}\\
+	\subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei speciesarea/maps/Npred/snowcrab/annual/Npred\D mean\D 2016.png}}\	  
+	\subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei speciesarea/maps/Z/snowcrab/annual/Z\D mean\D 2016.png}}\\  
+	\subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei metabolism/maps/mr/snowcrab/annual/mr\D mean\D 2016.png}}\
+	\subfloat{\includegraphics[width=0.45\textwidth,trim={0 1cm 0 1cm}]{\h \ei metabolism/maps/smr/snowcrab/annual/smr\D mean\D 2016.png}}\\
+	\caption{Community composition and ecological characteristics on the Scotian Shelf used in snow crab habitat determination modelling. Annual time series are used. Shown are results from 2016. }
+
+\end{figure}
+\clearpage
 
 %--------------scotian shelf community characteristics------------------------------------
 %\begin{figure}
@@ -136,28 +137,32 @@
 %\clearpage
 
 %--------------predictive habitat maps------------------------------------
-%\begin{figure}
-%\centering
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2009.png}}
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2010.png}}\\
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2011.png}}
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2012.png}}\\
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2013.png}}
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D no\D 2014.png}}
-%\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
-%\end{figure}
-%\clearpage
-
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2011.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2012.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2013.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2014.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2015.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2016.png}}\\
+\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
+\end{figure}
+\clearpage
 
 %--------------prediction of commercial male biomass from gam------------------------------------
-%\begin{figure}
-%    \centering
-%	\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D mass\D 2001.png}}\
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D mass\D 2011.png}}\\
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D mass\D 2012.png}}\
-%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/gam/maps/prediction\D habitat\D mean\D R0\D mass\D 2013.png}}\\
-%\caption{Posterior predicted probabilities of viable habitat for the fishable component of SSE snow crab.}
-%\end{figure}
+
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2011.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2012.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2013.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2014.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2015.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2016.png}}\\
+\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
+\end{figure}
+\clearpage
+
 
 
 %------groundfish survey strata for diet analysis
@@ -183,7 +188,7 @@
 %--------------sorted ordination------------------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \ei keyfactors\D anomalies.pdf}
+\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D anomalies.pdf}
 \caption{Sorted ordination of anomalies of key social, economic and ecological patterns on the Scotian Shelf relevant to snow crab. Red indicates below the mean and green indicates above the mean.}
 \end{figure}
 \clearpage
@@ -192,7 +197,7 @@
 %--------------first axis of sorted ordination------------------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \ei keyfactors\D PC1.pdf}
+\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D PC1.pdf}
 \caption{First axis of variations in ordination of anomalies of social, economic and ecological patterns on the Scotian Shelf. Note strong variability observed near the time of the fishery collapse in the early 1990s. Note strong variability observed near the time of the fishery collapse in the early 1990s.}
 \end{figure}
 \clearpage
@@ -242,24 +247,6 @@
 \clearpage
 %
 %
-%%--------------bottom tempaerture maps------------------------------------
-%\begin{figure}
-%\centering
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  1950.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  1960.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  1970.png}}\\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  1980.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  1990.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2000.png}}\\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2004.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2008.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2012.png}}\\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2014.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2015.png}}\ 
-%\subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \et maps/SSE/bottom\D predictions/annual/temperatures\D bottom\D  2016.png}}\\ 
-%\caption{Interpolated mean annual bottom temperatures on the Scotian Shelf for selected years. These interpolations use all available water temperature data collected in %the area including Groundfish Surveys, Snow crab survey, and AZMP monitoring stations.}
-%\end{figure}
-%\clearpage
 %%--------------bottom tempaerture maps------------------------------------
 \begin{figure}
 \centering
