--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -203,32 +203,39 @@
 \clearpage
 
 
-%------------------crab movement fig1 Movement map, Figure 2 Distances travelled and recap time-----
+%------------------crab movement fig1 Movement map, Distances travelled and recap time-----
+
+
 
 \begin{figure}
 \centering
-\includegraphics[width=0.8\textwidth]{\h \es assessments/2014/BrentCameronFigures/movementmap.png}
-\caption{Movement of terminally molted fishable snow crab on the Scotian Shelf. More detailed maps can be viewed at the ENS Snow Crab website.}
-\end{figure}
-
-\begin{figure}
-\centering
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es assessments/2014/BrentCameronFigures/distancemoved.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es assessments/2014/BrentCameronFigures/timeatlarge.png}}\\
-
-\caption{(Left) Distance traveled by tagged snow crab in ENS 2005-2013. (Right) Return interval in days between initial release and first recapture for snow crab tagged in ENS.}
+\subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/SpaghettiTagSummaryMap.png}}\
+\caption{Map of movements for tagged terminally moulted commercial snow crab on the Scotian Shelf with movements between mark and recapture locations constrained to the shortest path within depth contours of 60 and 280 m.}
 \end{figure}
 \clearpage
 
 
 \begin{figure}
 \centering
-\subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2014/BrentCameronFigures/otntagging.png}}\
+\subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/TagMovementRate.png}}\
+\caption{(Left) Distance travelled by tagged snow crab on the Scotian Shelf between 2005 and 2016. (Right) Return intervals in days between initial release and first capture of snow crab tagged on the Scotian Shelf. Periodicity in time intervals are explained by recaptures occurring during seasonal fishing operations.}
+\end{figure}
 
-\caption{Map of release and detection sites of acoustic tags applied to 27 terminally moulted commercial snow crab.}
+
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/MovementRates.png}}\
+\caption{(Left) Mean rate of movement of snow crab tagged on the Scotian Shelf by area and year. Route lengths derived from calculated shortest paths constrained by depth range of 60-280 m. Sample size small (<8 returns per area) for years 2003 to 2005 which accounts for the high variability especially in S-ENS for those years. (Right) Tags return rate, number of returns from tags applied in given area and year. Shows downward trend in recent years.}
 \end{figure}
 \clearpage
 
+
+\begin{figure}
+\centering
+\subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/AcousticTagMap.png}}\
+\caption{Map of movements for acoustic tagged snow crab on the Scotian Shelf with movements between mark and detection locations constrained by depth range of 60-280 m. Triangles represent release locations.}
+\end{figure}
+\clearpage
 
 %------------------------time series of observed temperatures snowcrab and groundfish surveys
 \begin{figure}
@@ -868,7 +875,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{\h \es assessments/2014/fishablebiomasssurveygam.png}\\ 
-\caption{Trends in the area expanded geometric mean fishable biomass obtained from the annual snow crab survey. Error bars are 95\% CI about geometric mean. Area estimates are obtained from GAM habitat model.}
+\caption{Trends in the area expanded geometric mean fishable biomass $\left(\tfrac{t}{km^2}\right)$ obtained from the annual snow crab survey. Error bars are 95\% CI about geometric mean. Area estimates are obtained from GAM habitat model.}
 \end{figure} %
 \clearpage
 
@@ -914,12 +921,11 @@
 \end{figure}
 \clearpage
 
-\end{document}
 
 %--------------priors and posteriors
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs K\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/K\D density.png}
     \caption{Prior (red) and posterior (bars) distribution for carrying capacity parameter, K, from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -927,7 +933,7 @@
 
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs r\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/r\D density.png}
     \caption{Prior (red) and posterior (bars) distribution for populaton growth parameter, r, from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -935,7 +941,7 @@
 
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs q\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/q\D density.png}
     \caption{Prior (red) and posterior (bars) distribution for catchability parameter, q, from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -945,7 +951,7 @@
 
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs bp\D sd\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/bp\D sd\D density.png}
     \caption{Prior (red) and posterior (bars) distribution for process error from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -953,7 +959,7 @@
 
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs bo\D sd\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/bo\D sd\D density.png}
     \caption{Prior (red) and posterior (bars) distribution for observation error from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -961,7 +967,7 @@
 
 \begin{figure}
     
-    \includegraphics[width=\textwidth]{\h \ebugs FMSY\D density.png}
+    \includegraphics[width=\textwidth]{\h \es assessments/2016/FMSY\D density.png}
     \caption{Posterior distribution for fishing mortality at maximum sustainable yield from the biomass dynamic model of snow crab production in crab fishing areas on the Scotian Shelf. Within each panel, estimates of posterior median and 95\% credible intervals are given in the legend.}
   
 \end{figure}
@@ -972,7 +978,7 @@
 %-----------Modelsimulations of fishable biomass---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \es assessments/2014/biomass\D timeseries.png}\\ 
+\includegraphics[width=\textwidth]{\h \es assessments/2016/biomass\D timeseries.png}\\ 
 \caption{Time series of fishable biomass from the logistic population models. The fishable biomass index is shown in red dashed lines. The posterior mean fishable biomass estimated from the logistic model are shown in blue stippled lines. The density distribution of posterior fishable biomass estimates are presented (gray) with the darkest area being medians and the 95\% CI. A three year projection assuming a constant exploitation strategy of 20\% is also provided.}
 \end{figure}
 \clearpage
@@ -993,7 +999,7 @@
 %-----------Modelsimulations of fishing mortality---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \es assessments/2014/fishingmortality\D timeseries.png}\\
+\includegraphics[width=\textwidth]{\h \es assessments/2016/fishingmortality\D timeseries.png}\\
 \caption{Time-series of fishing mortality from the logistic population models for N-ENS, S-ENS and 4X, respectively. Posterior density distributions are presented in gray, with the darkest line being the median with 95\% CI. The red line is the estimated FMSY and dark stippled line is the 20\% harvest rate.}
 \end{figure}
 \clearpage
@@ -1018,7 +1024,7 @@
 %%---------relationship between F and B--------------------------------------
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{\h \es assessments/2014/figures/bugs/survey/hcr\D default.png}\\ 
+\includegraphics[width=\textwidth]{\h \es assessments/2016/hcr\D default.png}\\ 
 \caption{Time series of fishing mortality and fishable biomass for N-ENS (top), S-ENS (middle) and 4X (bottom) as obtained from the logistic population models.}
 \end{figure}
 \clearpage
