--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -240,14 +240,14 @@
 %------------------------time series of observed temperatures snowcrab and groundfish surveys
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/t.png} %
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/t.pdf} %
 \caption{Annual variations in bottom temperature observed during the ENS snow crab survey. The horizontal line indicates the long-term median temperature within each subarea. Error bars are 1 standard deviation. }
 \end{figure}
 \clearpage
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/groundfish\D t.png} %
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/groundfish\D t.pdf} %
 \caption{Annual variations in bottom temperature observed during the DFO July RV Groundfish Survey. The horizontal line indicates the long-term median temperature within each subarea. Error bars are 1 standard deviation.}
 
 \end{figure}
@@ -301,7 +301,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 30.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 30.pdf}
 
 \caption{Trends in biomass $\left(\tfrac{t}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Atlantic halibut}.    }
 \end{figure}
@@ -324,7 +324,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 50.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 50.pdf}
 
 \caption{Trends in biomass $\left(\tfrac{t}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Atlantic wolffish}.    }
 \end{figure}
@@ -346,7 +346,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 201.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 201.pdf}
 
 \caption{Trends in biomass $\left(\tfrac{t}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Thorny skate}.    }
 \end{figure}
@@ -369,7 +369,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 202.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 202.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{t}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Smooth skate}   }
@@ -393,7 +393,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 204.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 204.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Winter skate}.    }
@@ -420,7 +420,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 10.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 10.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Atlantic cod}   }
@@ -448,7 +448,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 11.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 11.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Haddock}  }
@@ -475,7 +475,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 40.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 40.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Haddock}  }
@@ -510,7 +510,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2211.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2211.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{prey} of snow crab on the Scotian Shelf: \textbf{Northern Shrimp}.  }
@@ -532,7 +532,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2521.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2521.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{competition} of snow crab on the Scotian Shelf: \textbf{Lesser Toad Crab}.  }
@@ -555,7 +555,7 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2511.png}
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 2511.pdf}
 
 
 \caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{competition} of snow crab on the Scotian Shelf: \textbf{Jonah Crab}.  }
@@ -662,7 +662,8 @@
 %--------------carapace width from  at sea observers------------------------------------
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth,trim={0 0 0 1cm },clip]{\h \es assessments/2016/timeseries/observer/cw.pdf}\caption{Time series of mean carapace width of commercial crab measured by at-sea-observers. For 4X, the year refers to the starting year of the season. }
+\includegraphics[width=0.9\textwidth,trim={0 0 0 1cm },clip]{\h \es assessments/2016/timeseries/observer/cw.pdf}
+\caption{Time series of mean carapace width of commercial crab measured by at-sea-observers. For 4X, the year refers to the starting year of the season. }
 \end{figure}
 
 \clearpage
@@ -749,7 +750,7 @@
 %-----------sex ratio immature---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/sexratio\D imm.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/sexratio\D imm.pdf}\\ 
 \caption{ Annual sex ratios (proportion female) of immature snow crab on the Scotian Shelf.}
 \end{figure}
 \clearpage
@@ -776,7 +777,7 @@
 %-----------females immature---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/totno\D female\D imm.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/totno\D female\D imm.pdf}\\ 
 \caption{ Numeric density of immature females in the SSE.}
 \end{figure}
 \clearpage
@@ -803,7 +804,7 @@
 %-----------females mature---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/totno\D female\D mat.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/totno\D female\D mat.pdf}\\ 
 \caption{ Numeric density of mature females from the annual snow crab survey.}
 \end{figure}
 \clearpage
@@ -848,7 +849,7 @@
 %-----------egg production---------------------------
 \begin{figure} %
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/fecundity.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/fecundity.pdf}\\ 
 \caption{Index of egg production in the SSE, determined from the number of berried females and fecundity at weight estimates.}
 \end{figure}
 \clearpage
@@ -856,7 +857,7 @@
 %-----------time series of fishable biomass---------------------------
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R0\D mass.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R0\D mass.pdf}\\ 
 \caption{Trends in the geometric mean of fishable biomass obtained from the annual snow crab survey. Error bars are 95\% CI about geometric mean.}
 \end{figure} %
 \clearpage
@@ -864,7 +865,7 @@
 %-----------time series of fishable biomass reduced number of stations---------
 %\begin{figure}
 %\centering
-%\includegraphics[width=0.9\textwidth]{\h \es assessments/2014/timeseries/survey/R0\D mass\D reduced\D stations\D combined.png%}\\ 
+%\includegraphics[width=0.9\textwidth]{\h \es assessments/2014/timeseries/survey/R0\D mass\D reduced\D stations\D combined.pdf%}\\ 
 %\caption{Trends in the geometric mean of fishable biomass obtained from the annual snow crab survey using the same subset %of stations as in 2014. Error bars are 95\% CI about geometric mean.}
 %\end{figure} %
 %\clearpage
@@ -909,14 +910,14 @@
 %-----------recruits---------------------------
 %\begin{figure}
 %\centering
-%\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R1\D no.png}\\ 
+%\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R1\D no.pdf}\\ 
 %\caption{Trends in the geometric mean of recruiting (>95mm CW, CC 1 and 2) male abundance obtained from the annual snow crab survey. Error bars are 95\% CI about %geometric mean.}
 %\end{figure}
 %\clearpage
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R2\D no.png}\\ 
+\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/R2\D no.pdf}\\ 
 \caption{Trends in the geometric mean abundance of male snowcrab (75-95 mm CW) obtained from the annual snow crab survey. Error bars are 95\% CI about geometric mean.}
 \end{figure}
 \clearpage
@@ -988,7 +989,7 @@
 %-----------Modelsimulations of fishable biomass reduced stations---------------------------
 %\begin{figure}
 %\centering
-%\includegraphics[width=\textwidth]{\h \es assessments/2014/biomass\D reduced\D stations\D timeseries.png}\\ 
+%\includegraphics[width=\textwidth]{\h \es assessments/2014/biomass\D reduced\D stations\D timeseries.pdf}\\ 
 %\caption{Time series of fishable biomass from the logistic population models using the biomass index with reduced number %of stations. The fishable biomass index is shown in red dashed lines. The posterior mean fishable biomass estimated from %the logistic model are shown in blue stippled lines. The density distribution of posterior fishable biomass estimates are %presented (gray) with the darkest area being medians and the 95\% CI. A three year projection assuming a constant %exploitation strategy of 20\% is also provided.}
 %\end{figure}
 %\clearpage
