--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -153,12 +153,12 @@
 
 \begin{figure}
 \centering
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2011.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2012.png}}\\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2013.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2014.png}}\\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2015.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_abundance/snowcrab/annual/snowcrab\D large\D males_abundance\D mean\D 2016.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2011.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2012.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2013.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2014.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2015.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2016.png}}\\
 \caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
 \end{figure}
 \clearpage
